<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hospital_addDoctor">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_doctor_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FA0808"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" tools:targetApi="o" />

    <EditText
        android:id="@+id/et_mailid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_doctor_email_id"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#FA0808"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/et_name" tools:targetApi="o" />

    <EditText
        android:id="@+id/ed_post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_doctor_post"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mailid"
        android:textColor="#FA0808"
        android:textSize="24sp"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/et_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_doctor_s_time_in_hospital"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_post"
        android:textColor="#FA0808"
        android:textSize="24sp"
        android:importantForAutofill="no" tools:targetApi="o" />

    <EditText
        android:id="@+id/et_doc_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_doctor_hospital_s_mobile_number"
        android:importantForAutofill="no"
        android:inputType="date|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_time"
        android:textColor="#FA0808"
        android:textSize="24sp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btn_add_doca"
        android:onClick="addDoc"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#FA0808"
        android:textColor="#FDFDFE"
        app:layout_constraintTop_toBottomOf="@+id/et_doc_number" />

    <Button
        android:id="@+id/btn_cncle"
        android:onClick="clear_all"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/cancle"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_doca"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#FA0808"
        android:textColor="#FDFDFE"
        app:layout_constraintTop_toBottomOf="@+id/et_doc_number" />

</androidx.constraintlayout.widget.ConstraintLayout>